[tool.poetry]
name = "flaskwebapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
psycopg = {version = "3.1.18", extras = ["binary"]}
flask-sqlalchemy = "3.1.1"
flask-migrate = "^4.0.7"
flask-login = "^0.6.3"
apscheduler = "^3.11.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
